--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Project Library</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <h1>Library</h1>
+      <h1>Library</h1>
     </header>
 
     <main class="main">
-
-        <div class="book-container">
-            <button class="add-btn">Add Book</button>
-            <div class="popup-wrapper">
-         
-            <div class="myForm">
-                <input type="text" name="title" placeholder="Title">
-                <input type="text" name="author" placeholder="Author">
-                <input type="text" name="totalPages" placeholder="Pages">
-                <label for="read">Have you read it</label>
-                <input type="checkbox" name="read" id="read">
-                <button type="submit" class="submit-btn">Submit</button>
-            </div> 
+      <div class="book-container">
+        <button class="add-btn">Add Book</button>
+        <div class="popup-wrapper">
+          <div class="myForm">
+              <h3>Add New Book</h3>
+            <input type="text" name="title" placeholder="Title" />
+            <input type="text" name="author" placeholder="Author" />
+            <input type="text" name="totalPages" placeholder="Pages" />
+            <label for="read">Have you read it</label>
+            <input type="checkbox" name="read" id="read" />
+            <div class="wrapper-btn">
+            <button class="close">Cancel</button>
+            <button type="submit" class="submit-btn">Submit</button>
         </div>
+          </div>
         </div>
-
-
+      </div>
     </main>
 
     <footer class="footer">Copyright 2021 markcanlas</footer>
 
-
     <script src="app.js"></script>
-    
-</body>
+  </body>
 </html>
