--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <title>Project Library</title>
   </head>
   <body>
+    <div class="container">
     <header class="header">
-      <h1>Library</h1>
+      <h1>LIBRARY</h1>
     </header>
 
     <main class="main">
+      <button class="add-btn">Add Book</button>
       <div class="book-container">
-        <button class="add-btn">Add Book</button>
         <div class="popup-wrapper">
           <div class="myForm">
               <h3>Add New Book</h3>
@@ -39,7 +40,7 @@
     </main>
 
     <footer class="footer">Copyright 2021 markcanlas</footer>
-
+  </div>
     <script src="app.js"></script>
   </body>
 </html>
