Add style and add book function

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
       <button class="add-btn">Add Book</button>
       <div class="book-container">
         <div class="popup-wrapper">
-          <div class="myForm">
+          <form class="myForm">
               <h3>Add New Book</h3>
-            <input type="text" name="title" placeholder="Title" />
-            <input type="text" name="author" placeholder="Author" />
-            <input type="text" name="totalPages" placeholder="Pages" />
+            <input class = "title" type="text" name="title" placeholder="Title" />
+            <input class = "author" type="text" name="author" placeholder="Author" />
+            <input class = "total-pages" type="text" name="totalPages" placeholder="Pages" />
             <label for="read">Have you read it</label>
-            <input type="checkbox" name="read" id="read" />
+            <input class= "check-box" type="checkbox" name="read" id="read" />
             <div class="wrapper-btn">
             <button class="close">Cancel</button>
-            <button type="submit" class="submit-btn">Submit</button>
-        </div>
+            <button type="text" class="submit-btn">Submit</button>
+          </form>
           </div>
         </div>
       </div>
